Fix bug - close infowindow if visible markers = 0

--- a/src/App.css
+++ b/src/App.css
@@ -433,7 +433,7 @@ th {
 
 .iw-photo {
   background: #fdaf08;
-  max-height: 60px;
+  max-height: 50px;
   border-radius: 40px; }
 
 .iw-content {
