--- a/src/scss/_InfoWindow.scss
+++ b/src/scss/_InfoWindow.scss
@@ -5,7 +5,7 @@
 }
 .iw-photo {
   background: $yellow;
-  max-height: 60px;
+  max-height: 50px;
   border-radius: 40px;
 }
 
